syntax = "proto3";

package silenteight.solving.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

import public "silenteight/protobuf/uuid.proto";
import public "silenteight/solving/api/v1/feature.proto";

option java_package = "com.silenteight.solving.api.v1";
option java_outer_classname = "PolicyStepsSolvingApiProto";
option java_multiple_files = true;

service PolicyStepsSolving {
  rpc BatchSolveFeatures (BatchSolveFeaturesRequest) returns (BatchSolveFeaturesResponse) {
    option (google.api.http) = {
      post: "/v1/{policy_name=policies/*}:batchSolve"
      body: "*"
    };
  }
}

// Batch request
message BatchSolveFeaturesRequest {
  // Name of policy used for solving
  string policy_name = 1 [(google.api.field_behavior) = REQUIRED];
  // Feature space definitions
  FeatureCollection feature_collection = 2;
  // Ordered collection of feature vectors
  repeated FeatureVector feature_vectors = 3;
}

// Batch response
message BatchSolveFeaturesResponse {
  // Ordered collection of responses
  repeated SolutionResponse solutions = 1;
}

// Single response
message SolutionResponse {
  // Solution assigned to a vector
  FeatureVectorSolution feature_vector_solution = 1;
  // Any two vectors with the same signatures are considered the same.
  bytes feature_vector_signature = 2;
  // Id of the step that triggered the solution
  protobuf.Uuid step_id = 3;
}
